1. Fix sizing so that variant density chart and chromosome bar chart (x-axis) align horizontally.  Can't rely on view box to size correctly for both charts, so recalculate view box width and height each time charts are refreshed with new data. 2. Also, chart now defaults to showing 'ALL' references as first view when vcf loads.

--- a/assets/css/vcf.iobio.css
+++ b/assets/css/vcf.iobio.css
@@ -209,7 +209,7 @@ section#bottom {
 
 }
 #variant-density-ref-vf {
-    margin-top: -3px;
+    margin-top: -24px;
 }
 
 #variant-density {
